--- a/app/src/main/res/layout/fragment_detailed_description.xml
+++ b/app/src/main/res/layout/fragment_detailed_description.xml
@@ -16,7 +16,7 @@
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
+            android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             app:layout_scrollFlags="scroll"
             app:navigationIcon="?attr/homeAsUpIndicator"
