--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -2,10 +2,11 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/game_details_fragment_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="?android:colorBackground"
+    android:orientation="vertical"
     >
 
     <androidx.recyclerview.widget.RecyclerView
