--- a/app/src/main/res/layout/fragment_game_details.xml
+++ b/app/src/main/res/layout/fragment_game_details.xml
@@ -9,6 +9,12 @@
     android:orientation="vertical"
     >
 
+    <View
+        android:id="@+id/bgTint"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGameDetails"
         android:layout_width="match_parent"
