--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -46,5 +46,6 @@
     <color name="color_overlay_next">#537F3A</color>
     <color name="color_overlay_hide">#951823</color>
 
-    <color name="platforms_icon_tint">#38475B</color>
+    <color name="platforms_icon_tint">#ffffff</color>
+    <color name="color_chip_game_description">#20ffffff</color>
 </resources>
