--- a/app/src/main/res/layout/fragment_roulette.xml
+++ b/app/src/main/res/layout/fragment_roulette.xml
@@ -23,6 +23,7 @@
         android:transitionGroup="true"
         app:layout_constraintBottom_toTopOf="@id/fabHideGame"
         app:layout_constraintDimensionRatio="2:3"
+        app:layout_constraintHeight_max="@dimen/max_game_card_height"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
@@ -33,13 +34,13 @@
         android:id="@+id/fabHideGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/spacing_normal"
+        android:layout_marginBottom="@dimen/spacing_normal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toLeftOf="@id/fabGameInfo"
         app:layout_constraintTop_toBottomOf="@id/rvRoulette"
-        android:layout_marginBottom="@dimen/spacing_normal"
-        android:layout_marginTop="@dimen/spacing_normal"
         app:srcCompat="@drawable/ic_visibility_off_24dp"
         />
 
