--- a/app/src/main/res/layout/item_game_card_stack.xml
+++ b/app/src/main/res/layout/item_game_card_stack.xml
@@ -25,7 +25,7 @@
         android:alpha="0"
         android:elevation="2dp"
         android:rotation="20"
-        android:tint="@color/color_overlay_hide"
+        app:tint="@color/color_overlay_hide"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_bias="0.9"
@@ -46,7 +46,7 @@
         android:alpha="0"
         android:elevation="1dp"
         android:rotation="-20"
-        android:tint="@color/color_overlay_next"
+        app:tint="@color/color_overlay_next"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintHorizontal_bias="0.1"
