--- a/app/src/main/res/layout/item_game_card_stack.xml
+++ b/app/src/main/res/layout/item_game_card_stack.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:layerType="hardware"
     android:stateListAnimator="@drawable/card_stack_item_state_list_animator"
+    android:transitionGroup="true"
     >
 
     <ru.luckycactus.steamroulette.presentation.ui.widget.GameView
