--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -1,34 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
+    android:clipChildren="false"
+    android:orientation="vertical"
     >
+
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:navigationIcon="?homeAsUpIndicator"
+        app:title="@string/about_app"
+        />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="?actionBarSize"
+        android:clipChildren="false"
         >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
-
-            <ImageView
-                android:id="@+id/ivIcon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
-                android:src="@mipmap/ic_launcher"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                />
 
             <TextView
                 android:id="@+id/tvAppName"
@@ -57,13 +56,13 @@
                 android:id="@+id/tvCopyright"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_normal"
+                android:text="\u00A9 luckycactus"
                 android:textAppearance="?textAppearanceOverline"
+                android:textColor="?colorOnBackground"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/tvVersion"
-                android:layout_marginTop="@dimen/spacing_normal"
-                android:text="\u00A9 luckycactus"
-                android:textColor="?colorOnBackground"
                 />
 
             <com.google.android.material.textview.MaterialTextView
@@ -100,17 +99,31 @@
                 app:layout_constraintTop_toBottomOf="@id/tvUsedLibraries"
                 />
 
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvRateApp"
+                style="@style/AboutItemTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/primary_selectable_item_background"
+                android:drawableStart="@drawable/ic_baseline_thumb_up_24"
+                android:drawableEnd="@drawable/ic_chevron_right"
+                android:text="@string/rate_app_title"
+                app:layout_constraintTop_toBottomOf="@id/tvPrivacyPolicy"
+                />
+
+            <ImageView
+                android:id="@+id/ivIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:src="@mipmap/ic_launcher"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top"
-        app:navigationIcon="?homeAsUpIndicator"
-        app:title="@string/about_app"
-        />
-
-</FrameLayout>
+</LinearLayout>
