--- a/app/src/main/res/layout/fragment_games.xml
+++ b/app/src/main/res/layout/fragment_games.xml
@@ -20,19 +20,19 @@
             android:layout_gravity="bottom"
             app:layout_scrollFlags="scroll|enterAlways"
             app:navigationIcon="?attr/homeAsUpIndicator"
-            app:title="@string/hidden_games"
             />
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHiddenGames"
+        android:id="@+id/rvGames"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
-        android:padding="@dimen/default_activity_margin"
+        android:padding="@dimen/spacing_normal"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:scrollbars="vertical"
+        android:scrollbarStyle="outsideOverlay"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
