--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -21,4 +21,5 @@
     <dimen name="game_view_details_text_size">16sp</dimen>
     <dimen name="max_game_card_height">800dp</dimen>
     <dimen name="spacing_games_library">12dp</dimen>
+    <dimen name="filter_sheet_header_height">48dp</dimen>
 </resources>
