--- a/app/src/main/res/layout/fragment_library.xml
+++ b/app/src/main/res/layout/fragment_library.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_fragment_library"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="?android:colorBackground"
@@ -34,6 +35,7 @@
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        tools:listitem="@layout/item_library_game"
         />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -56,10 +58,11 @@
 
     <fragment
         android:id="@+id/filterSheet"
-        android:name="ru.luckycactus.steamroulette.presentation.features.games.GamesLibraryFilterFragment"
+        android:name="ru.luckycactus.steamroulette.presentation.features.games.LibraryFilterFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+        tools:layout="@layout/fragment_library_filter"
         />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
