--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,7 +44,7 @@
     <dimen name="alpha_emphasis_disabled">@dimen/material_emphasis_disabled</dimen>
 
     <color name="color_overlay_next">#537F3A</color>
-    <color name="color_overlay_hide">#951823</color>
+    <color name="color_overlay_hide">#BF1726</color>
 
     <color name="platforms_icon_tint">#a0ffffff</color>
     <color name="color_chip_game_description">#20ffffff</color>
