--- a/app/src/main/res/layout/item_library_game.xml
+++ b/app/src/main/res/layout/item_library_game.xml
@@ -19,6 +19,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:cardBackgroundColor="?colorPrimary"
         />
 
     <ru.luckycactus.steamroulette.presentation.ui.widget.GameView
